...
                    .font(.custom("Noteworthy-Light", size: 24))
                    .foregroundColor(.white)
                    .padding(.top, 10)
                    .padding(.leading, 20)
                    .frame(maxWidth: .infinity, alignment: .leading)
                
                Text("Trouve ton voyage de rêve en effectuant ce test !")
                    .font(.custom("Georgia", size: 18))
                    .foregroundColor(.white)
                    .multilineTextAlignment(.leading)
                    .padding(.horizontal, 20)
                    .padding(.top, 30)
                
...
                .overlay(Circle().stroke(Color.white, lineWidth: 1))
                .padding(.top, 45)

                Button(action: {
                    navigateToTravelView = true
                }) {
                    Text("Commencer le test")
                        .font(.custom("Georgia", size: 18))
                        .foregroundColor(.white)
                        .padding()
                        .background(Color(hex: "#3b6187"))
                        .cornerRadius(10)
                        .padding(.top, 30)
...
