...
                .font(.custom("Noteworthy-Light", size: 24))
                .foregroundColor(.white)
                .padding(.top, 10)
                .padding(.leading, 20)
                .frame(maxWidth: .infinity, alignment: .leading)

            Text("Où partir ?")
                .font(.custom("Georgia", size: 20))
                .foregroundColor(.white)
                .padding(.top, 10)
                .padding(.leading, 40)
                .frame(maxWidth: .infinity, alignment: .leading)

            ScrollView {
                VStack(spacing: 10) {
                    HStack {
                        DestinationButton(destination: "Paris", icon: "paris", selectedLocation: $selectedLocation)
                        DestinationButton(destination: "Marseille", icon: "marseille", selectedLocation: $selectedLocation)
                        DestinationButton(destination: "Chamonix", icon: "chamonix", selectedLocation: $selectedLocation)
                    }
                    HStack {
                        DestinationButton(destination: "Tokyo", icon: "tokyo", selectedLocation: $selectedLocation)
                        DestinationButton(destination: "Bali", icon: "bali", selectedLocation: $selectedLocation)
...
